fix: add missing gap between steps

--- a/wwwroot/assets/style.css
+++ b/wwwroot/assets/style.css
@@ -541,6 +541,7 @@ h2 {
 .steps {
     display: flex;
     flex-direction: column;
+    gap: 8px;
 }
 
 .steps>p {
